2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m: Extracted code shared between these two
	files into new files.
	* Source/art/FTFaceInfo.h,
	* Source/art/FTFaceInfo.m,
	* Source/art/FTFontEnumerator.h,
	* Source/art/FTFontEnumerator.m: New files with extracted code.
	* Source/art/GNUmakefile: Add new source files.

2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_setupRootWindow): Revert last
	change.
	* Source/x11/XGServerWindow.m (-setinputfocus:): Use CurrentTime
	instead of generic.lastTime.
	
2007-08-21 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (-processEvent:): Made handling of
	focus in and out more explicit.

2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGFontManager.m (load_cache),
	* Tools/font_cacher.m (-writeCacheTo): Increase version number of
	font format, as font mask values have changed.

2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_setupRootWindow): Set lastTime to
	CurrentTime not 1 to get setinputfocus working for the first
	activation of the application.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_checkWMSupports:,
	-_tryRequestFrameExtents:): Correct minor errors.
	* Source/art/ftfont.m (-coveredCharacterSet): Protect against
	illegal characters.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m: Add more EWMH methods and helper
	methods for them.
	* Tools/xpbs.m: Simplify dragging support code.

2007-08-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m (-coveredCharacterSet): Correct code.
	Patch by Yen-Ju Chen <yjchenx@gmail.com>.

2007-08-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m (-coveredCharacterSet): Use local FT_Size
	variable instead of ivar. The ivar is sometimes invalid.
	Cleaned up compiler warnings.

2007-08-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServer.m (+initializeBackend): Handle SIGINT by